[package]
name = "byond-memorystats"
version = "0.1.0"
edition = "2021"
authors = ["Lucy <lucy@absolucy.moe>"]
license = "MPL-2.0"
repository = "https://github.com/Absolucy/byond-memorystats"
publish = false

[lib]
name = "memorystats"
crate-type = ["cdylib"]

[build-dependencies]
cc = "1"

[profile.release]
lto = "fat"
codegen-units = 1
overflow-checks = false
