[package]
name = "byond-memorystats"
version = "0.1.0"
edition = "2021"
authors = ["Lucy <lucy@absolucy.moe>"]
license = "MPL-2.0"
repository = "https://github.com/Absolucy/byond-memorystats"
publish = false

[lib]
name = "memorystats"
crate-type = ["cdylib"]

[dependencies]
cfg-if = "1"
libloading = "0.8"

[target.'cfg(windows)'.dependencies]
vc-ltl = "5.2.1-Beta3"

[build-dependencies]
cc = "1"

[profile.release]
opt-level = "s"
lto = "thin"
codegen-units = 1
overflow-checks = false
strip = true
